hls/svr-vivado-hls/solution1/csim/report/convert_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../../samplefunction.cpp in debug mode
csim.mk:83: recipe for target 'obj/samplefunction.o' failed
../../../../samplefunction.cpp: In function ‘void spherical2cartesian(angles, angles, angles**)’:
../../../../samplefunction.cpp:53:17: error: cannot convert ‘angles {aka ap_fixed<5, 10>}’ to ‘angles* {aka ap_fixed<5, 10>*}’ in assignment
     result[0] = x;
                 ^
../../../../samplefunction.cpp:54:17: error: cannot convert ‘angles {aka ap_fixed<5, 10>}’ to ‘angles* {aka ap_fixed<5, 10>*}’ in assignment
     result[1] = y;
                 ^
../../../../samplefunction.cpp:55:17: error: cannot convert ‘angles {aka ap_fixed<5, 10>}’ to ‘angles* {aka ap_fixed<5, 10>*}’ in assignment
     result[2] = z;
                 ^
../../../../samplefunction.cpp: In function ‘void spherical2coordinates(angles, angles, indexes**)’:
../../../../samplefunction.cpp:73:18: error: cannot convert ‘angles {aka ap_fixed<5, 10>}’ to ‘indexes* {aka ap_fixed<10, 10, (ap_q_mode)5u, (ap_o_mode)3u, 0>*}’ in assignment
     result [0] = i;
                  ^
../../../../samplefunction.cpp:74:18: error: cannot convert ‘angles {aka ap_fixed<5, 10>}’ to ‘indexes* {aka ap_fixed<10, 10, (ap_q_mode)5u, (ap_o_mode)3u, 0>*}’ in assignment
     result [1] = j;
                  ^
../../../../samplefunction.cpp: In function ‘void matrixMultiplication(angles*, angles (*)[3], angles**)’:
../../../../samplefunction.cpp:96:91: error: cannot convert ‘ap_fixed_base<11, 21, true, (ap_q_mode)5u, (ap_o_mode)3u, 0>::RType<10, 20, true>::plus {aka ap_fixed<12, 22, (ap_q_mode)5u, (ap_o_mode)3u, 0>}’ to ‘angles* {aka ap_fixed<5, 10>*}’ in assignment
  result[0] = matrix[0][0] * vector[0] + matrix[0][1] * vector[1] + matrix[0][2] * vector[2];
                                                                                           ^
../../../../samplefunction.cpp:97:91: error: cannot convert ‘ap_fixed_base<11, 21, true, (ap_q_mode)5u, (ap_o_mode)3u, 0>::RType<10, 20, true>::plus {aka ap_fixed<12, 22, (ap_q_mode)5u, (ap_o_mode)3u, 0>}’ to ‘angles* {aka ap_fixed<5, 10>*}’ in assignment
  result[1] = matrix[1][0] * vector[0] + matrix[1][1] * vector[1] + matrix[1][2] * vector[2];
                                                                                           ^
../../../../samplefunction.cpp:98:91: error: cannot convert ‘ap_fixed_base<11, 21, true, (ap_q_mode)5u, (ap_o_mode)3u, 0>::RType<10, 20, true>::plus {aka ap_fixed<12, 22, (ap_q_mode)5u, (ap_o_mode)3u, 0>}’ to ‘angles* {aka ap_fixed<5, 10>*}’ in assignment
  result[2] = matrix[2][0] * vector[0] + matrix[2][1] * vector[1] + matrix[2][2] * vector[2];
                                                                                           ^
../../../../samplefunction.cpp: In function ‘void findPixel(int, angles, angles, indexes**)’:
../../../../samplefunction.cpp:115:18: error: cannot convert ‘indexes {aka ap_fixed<10, 10, (ap_q_mode)5u, (ap_o_mode)3u, 0>}’ to ‘indexes* {aka ap_fixed<10, 10, (ap_q_mode)5u, (ap_o_mode)3u, 0>*}’ in assignment
     result [0] = n;
                  ^
../../../../samplefunction.cpp:116:18: error: cannot convert ‘indexes {aka ap_fixed<10, 10, (ap_q_mode)5u, (ap_o_mode)3u, 0>}’ to ‘indexes* {aka ap_fixed<10, 10, (ap_q_mode)5u, (ap_o_mode)3u, 0>*}’ in assignment
     result [1] = m;
                  ^
../../../../samplefunction.cpp: In function ‘void convert(int, int, angles, angles, int, int, int, int, int, float (*)[1024][2])’:
../../../../samplefunction.cpp:266:56: error: cannot convert ‘angles {aka ap_fixed<5, 10>}’ to ‘angles** {aka ap_fixed<5, 10>**}’ for argument ‘3’ to ‘void spherical2cartesian(angles, angles, angles**)’
        spherical2cartesian(toRadian(j), toRadian(i),*p1);
                                                        ^
../../../../samplefunction.cpp:268:42: error: cannot convert ‘angles {aka ap_fixed<5, 10>}’ to ‘angles** {aka ap_fixed<5, 10>**}’ for argument ‘3’ to ‘void matrixMultiplication(angles*, angles (*)[3], angles**)’
        matrixMultiplication(p1,rot_y, *p2);
                                          ^
../../../../samplefunction.cpp:272:43: error: cannot convert ‘angles {aka ap_fixed<5, 10>}’ to ‘angles** {aka ap_fixed<5, 10>**}’ for argument ‘3’ to ‘void matrixMultiplication(angles*, angles (*)[3], angles**)’
        matrixMultiplication(p2, rot_z, *p3);
                                           ^
../../../../samplefunction.cpp:276:53: error: cannot convert ‘indexes {aka ap_fixed<10, 10, (ap_q_mode)5u, (ap_o_mode)3u, 0>}’ to ‘indexes** {aka ap_fixed<10, 10, (ap_q_mode)5u, (ap_o_mode)3u, 0>**}’ for argument ‘4’ to ‘void cartesian2coordinates(angles, angles, angles, indexes**)’
       cartesian2coordinates(p3[0], p3[1], p3[2],*res);
                                                     ^
../../../../samplefunction.cpp:280:54: error: cannot convert ‘indexes {aka ap_fixed<10, 10, (ap_q_mode)5u, (ap_o_mode)3u, 0>}’ to ‘indexes** {aka ap_fixed<10, 10, (ap_q_mode)5u, (ap_o_mode)3u, 0>**}’ for argument ‘4’ to ‘void convert_xyz_to_cube_uv(angles, angles, angles, indexes**)’
       convert_xyz_to_cube_uv(p3[0], p3[1], p3[2],*res);
                                                      ^
make: *** [obj/samplefunction.o] Error 1
ERR: [SIM 100] CSim file generation failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
